--- a/Lecture_7_stage3_basics_of_python.ipynb
+++ b/Lecture_7_stage3_basics_of_python.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOTIzva0LWpUtGyxea5yP+N",
+      "authorship_tag": "ABX9TyOgO0+fM8Yfmq8pU25+lhbO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -87,7 +87,7 @@
         "id": "TmnCxLHBzx0F",
         "outputId": "4603c663-d712-47ba-aec4-953c45f979ce"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +122,7 @@
         "id": "X0wvKbEz0S6y",
         "outputId": "fccf6fc7-d484-4b80-e31d-1393e937a661"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +167,7 @@
         "id": "dpJC-BTC2laT",
         "outputId": "c7088da4-78e7-4db1-f854-bce3b39b52c3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
         "id": "AjCh2x5c2xSP",
         "outputId": "08ce5242-c14c-444b-f815-85e26bba38d4"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -220,7 +220,7 @@
         "id": "ooBsMYQC4Ed5",
         "outputId": "0cc8d545-b921-4828-c869-f2c43040f73d"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
         "id": "8u7XA08q5Sbu",
         "outputId": "dd3ab62b-2d6a-4805-bbc6-431a12fa4d5b"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -302,7 +302,7 @@
         "id": "4LcpjcD16jXC",
         "outputId": "4aa7a4dd-7d18-4947-a05f-9a91d85e0ed2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -333,7 +333,7 @@
         "id": "ECTlQmvI9NUM",
         "outputId": "572a4fc2-e7b6-45f7-84f9-b4d05d46ace3"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -358,7 +358,7 @@
       ],
       "metadata": {
         "id": "UvAyybQG_GL0",
-        "outputId": "d49c769f-d4d4-44e4-8f15-bbf1b8f1646b",
+        "outputId": "1fd6e1ee-dfea-48c5-ad2d-6d8c65cd76ae",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -388,12 +388,12 @@
       ],
       "metadata": {
         "id": "USOIeQn3_tpb",
-        "outputId": "ffcd9882-f674-4ae0-bdad-be0abda151f5",
+        "outputId": "e3e3bce7-1e60-4b32-9c5c-9c7fd014ed47",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -418,7 +418,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -451,8 +451,7 @@
         "# print values from the dict\n",
         "my_dict={\"brand\": \"ford\", \"model\" : \"mustang\", \"year\" : \"1964\"}\n",
         "for values in my_dict.values():\n",
-        "  print(values)\n",
-        ""
+        "  print(values)\n"
       ],
       "metadata": {
         "id": "pMGpCEr6DCwv",
@@ -461,7 +460,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,7 +488,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -505,18 +504,78 @@
     {
       "cell_type": "code",
       "source": [
+        "numbers=[1,2,3,4,5,6,7,8,9,10]\n",
+        "for num in numbers:\n",
+        "  if num%2==0:\n",
+        "    print(num,\"is an even number\")"
+      ],
+      "metadata": {
+        "id": "n6X7qLURQoOJ",
+        "outputId": "a7ae7ae3-17e5-42a4-8b17-3ba86534146a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2 is an even number\n",
+            "4 is an even number\n",
+            "6 is an even number\n",
+            "8 is an even number\n",
+            "10 is an even number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers=[1,2,3,4,5,6,7,8,9,10]\n",
+        "for nums in numbers:\n",
+        "  if nums%2!=0:\n",
+        "    print(nums,\"is an odd number\")"
+      ],
+      "metadata": {
+        "id": "mbZjVGLDRy_V",
+        "outputId": "4c0acee4-d4f0-42c6-981d-f9707edef5b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 is an odd number\n",
+            "3 is an odd number\n",
+            "5 is an odd number\n",
+            "7 is an odd number\n",
+            "9 is an odd number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "my_dict={\"brand\": \"ford\", \"model\" : \"mustang\", \"year\" : \"1964\"}\n",
         "for d in my_dict.items():\n",
         "  print(d)"
       ],
       "metadata": {
         "id": "lLBvDG9heh4P",
-        "outputId": "dd47d0d4-7fdb-4e48-8ec2-a86d455b77bf",
+        "outputId": "cf39423e-c7f2-4338-de34-17f19bd30c96",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 12,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -525,6 +584,205 @@
             "('brand', 'ford')\n",
             "('model', 'mustang')\n",
             "('year', '1964')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Python while loop**\n",
+        "with the while loop we can execute a set of statements as long as a condition is true."
+      ],
+      "metadata": {
+        "id": "-4UEjjGnSFPd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Print i as long as i is less than 60:\n",
+        "i=1\n",
+        "while i < 60:\n",
+        "  print(i)\n",
+        "  i=i+1"
+      ],
+      "metadata": {
+        "id": "IqU_yNUZSpkX",
+        "outputId": "121c2ff1-25d4-45d9-9202-4529229e06aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n",
+            "20\n",
+            "21\n",
+            "22\n",
+            "23\n",
+            "24\n",
+            "25\n",
+            "26\n",
+            "27\n",
+            "28\n",
+            "29\n",
+            "30\n",
+            "31\n",
+            "32\n",
+            "33\n",
+            "34\n",
+            "35\n",
+            "36\n",
+            "37\n",
+            "38\n",
+            "39\n",
+            "40\n",
+            "41\n",
+            "42\n",
+            "43\n",
+            "44\n",
+            "45\n",
+            "46\n",
+            "47\n",
+            "48\n",
+            "49\n",
+            "50\n",
+            "51\n",
+            "52\n",
+            "53\n",
+            "54\n",
+            "55\n",
+            "56\n",
+            "57\n",
+            "58\n",
+            "59\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#while loop\n",
+        "count = 0\n",
+        "while (count < 3):\n",
+        "  count=count+1\n",
+        "  print(\"print hello\",count)"
+      ],
+      "metadata": {
+        "id": "aE-qUNaTi8vE",
+        "outputId": "eab603e5-f0be-4887-fbaf-98403cdd1380",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "print hello 1\n",
+            "print hello 2\n",
+            "print hello 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# user validation\n",
+        "password = \"\"\n",
+        "while password != \"secret\":\n",
+        "   password =input(\"enter the password: \")\n",
+        "   if password == \"secret\":\n",
+        "    print(\"Access granted\")\n",
+        "   else:\n",
+        "    print(\"Access denied\")\n"
+      ],
+      "metadata": {
+        "id": "hA7dJ8DkjaFQ"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "t=0\n",
+        "n=1\n",
+        "while n <=20:\n",
+        "  t=t+n\n",
+        "  n=n+1\n",
+        "print(t)\n"
+      ],
+      "metadata": {
+        "id": "EVuO0gHBTeht",
+        "outputId": "8be7cf3c-7f7d-4b0b-bdf6-005561fe4a8e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "210\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Summing numbers\n",
+        "total = 0\n",
+        "num = 1\n",
+        "while num <= 10:\n",
+        "  total = total + num\n",
+        "  num = num +1\n",
+        "print(\"the sum is\",total)"
+      ],
+      "metadata": {
+        "id": "U-EKLdoLksxU",
+        "outputId": "0c7c930d-611c-4ed2-e13a-a8672b9ab97b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "the sum is 55\n"
           ]
         }
       ]
@@ -575,7 +833,7 @@
       "metadata": {
         "id": "J_z4lJuZheCI"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -604,7 +862,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,7 +891,7 @@
       "cell_type": "code",
       "source": [
         "# function with parameters\n",
-        "def add_numbers(a,b):\n",
+        "def add_numbers(a,b): # a,b are variable,placeholder or parameters\n",
         "  sum=a+b\n",
         "  return sum\n",
         "result=add_numbers(5,4)\n",
@@ -646,7 +904,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -687,18 +945,28 @@
       "source": [
         "  def my_function(food):\n",
         "    for x in food:\n",
-        "      print(x)\n",
+        "      print(x)\n"
+      ],
+      "metadata": {
+        "id": "PEBtlI1Ollz7"
+      },
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "fruits=[\"apple\",\"banana\",\"cherry\"]\n",
         "my_function(fruits)"
       ],
       "metadata": {
-        "id": "PEBtlI1Ollz7",
-        "outputId": "1820b4cc-8482-44da-bf82-86f50176e922",
+        "id": "kf7CdznBYTBo",
+        "outputId": "3083b18c-3390-452c-d0be-7b672a27338b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 21,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -725,19 +993,19 @@
       "cell_type": "code",
       "source": [
         "def my_function(x):\n",
-        "  return 5*x\n",
+        "  return  5*x\n",
         "print(my_function(3))\n",
         "print(my_function(5))\n",
         "print(my_function(9))"
       ],
       "metadata": {
         "id": "3HtTplrWs2Q7",
-        "outputId": "32011340-a274-41a7-fabf-03da52f285ca",
+        "outputId": "52125da8-734b-4992-c9f0-32f3e906abff",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -767,12 +1035,12 @@
       ],
       "metadata": {
         "id": "qpw5miuAuOmQ",
-        "outputId": "1d03997f-a062-4dc7-bd2a-1dcd30904a16",
+        "outputId": "381e3728-87ef-49e4-d236-2072e5a26812",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -780,6 +1048,67 @@
           "text": [
             "hello world\n",
             "hello Ali\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# python program to find even or odd number\n",
+        "def check_even_odd(number):\n",
+        "  if number%2==0:\n",
+        "    print(number,\"is an even number\")\n",
+        "  else:\n",
+        "    print(number,\"is an odd number\")\n",
+        "#calling the function\n",
+        "check_even_odd(7)\n"
+      ],
+      "metadata": {
+        "id": "Y5I5I8B3Ow90",
+        "outputId": "d42b7810-b7a4-4b39-ab12-857a8b0ef89b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7 is an odd number\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Python program to count the number of words in a string\n",
+        "def count_word(string):\n",
+        "  words = string.split()\n",
+        "  return len(words)\n",
+        "\n",
+        "#calling the function\n",
+        "sentence=\"python is a popular programming language\"\n",
+        "word_count=count_word(sentence)\n",
+        "print(\"number of words\",word_count)"
+      ],
+      "metadata": {
+        "id": "5GGLBuatPk2y",
+        "outputId": "65c97dd7-bd7f-4d39-e429-fb00e4d44291",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "number of words 6\n"
           ]
         }
       ]
